--- a/MovieRental.csproj
+++ b/MovieRental.csproj
@@ -223,9 +223,22 @@
     <Compile Include="Migrations\202208220724085_AddCustomerBirthDate.Designer.cs">
       <DependentUpon>202208220724085_AddCustomerBirthDate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202208221207403_InitiateMovieDb.cs" />
+    <Compile Include="Migrations\202208221207403_InitiateMovieDb.Designer.cs">
+      <DependentUpon>202208221207403_InitiateMovieDb.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202208221348041_PopulateGenre.cs" />
+    <Compile Include="Migrations\202208221348041_PopulateGenre.Designer.cs">
+      <DependentUpon>202208221348041_PopulateGenre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202208221414001_AddAnnotationsToMovie.cs" />
+    <Compile Include="Migrations\202208221414001_AddAnnotationsToMovie.Designer.cs">
+      <DependentUpon>202208221414001_AddAnnotationsToMovie.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -349,6 +362,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202208220724085_AddCustomerBirthDate.resx">
       <DependentUpon>202208220724085_AddCustomerBirthDate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202208221207403_InitiateMovieDb.resx">
+      <DependentUpon>202208221207403_InitiateMovieDb.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202208221348041_PopulateGenre.resx">
+      <DependentUpon>202208221348041_PopulateGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202208221414001_AddAnnotationsToMovie.resx">
+      <DependentUpon>202208221414001_AddAnnotationsToMovie.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
