--- a/MovieRental.csproj
+++ b/MovieRental.csproj
@@ -235,6 +235,10 @@
     <Compile Include="Migrations\202208221414001_AddAnnotationsToMovie.Designer.cs">
       <DependentUpon>202208221414001_AddAnnotationsToMovie.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202208240152146_CorrectCustomerSubscribtionSpelling.cs" />
+    <Compile Include="Migrations\202208240152146_CorrectCustomerSubscribtionSpelling.Designer.cs">
+      <DependentUpon>202208240152146_CorrectCustomerSubscribtionSpelling.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -247,6 +251,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomerListViewModel.cs" />
     <Compile Include="ViewModels\MovieListViewModel.cs" />
+    <Compile Include="ViewModels\CustomerFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -309,6 +314,7 @@
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Customers\CustomerForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -371,6 +377,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202208221414001_AddAnnotationsToMovie.resx">
       <DependentUpon>202208221414001_AddAnnotationsToMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202208240152146_CorrectCustomerSubscribtionSpelling.resx">
+      <DependentUpon>202208240152146_CorrectCustomerSubscribtionSpelling.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
