--- a/MovieRental.csproj
+++ b/MovieRental.csproj
@@ -239,6 +239,14 @@
     <Compile Include="Migrations\202208240152146_CorrectCustomerSubscribtionSpelling.Designer.cs">
       <DependentUpon>202208240152146_CorrectCustomerSubscribtionSpelling.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202208300809174_MovieDateAddedUpdated.cs" />
+    <Compile Include="Migrations\202208300809174_MovieDateAddedUpdated.Designer.cs">
+      <DependentUpon>202208300809174_MovieDateAddedUpdated.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202208301352485_MovieDateAddedUpdated1.cs" />
+    <Compile Include="Migrations\202208301352485_MovieDateAddedUpdated1.Designer.cs">
+      <DependentUpon>202208301352485_MovieDateAddedUpdated1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -250,6 +258,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomerListViewModel.cs" />
+    <Compile Include="ViewModels\MovieFormViewModel.cs" />
     <Compile Include="ViewModels\MovieListViewModel.cs" />
     <Compile Include="ViewModels\CustomerFormViewModel.cs" />
   </ItemGroup>
@@ -315,6 +324,7 @@
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -380,6 +390,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202208240152146_CorrectCustomerSubscribtionSpelling.resx">
       <DependentUpon>202208240152146_CorrectCustomerSubscribtionSpelling.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202208300809174_MovieDateAddedUpdated.resx">
+      <DependentUpon>202208300809174_MovieDateAddedUpdated.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202208301352485_MovieDateAddedUpdated1.resx">
+      <DependentUpon>202208301352485_MovieDateAddedUpdated1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
